--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.5",
+    "next": "14.1.3",
+    "next-video": "^0.16.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.7.3",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
